samples/_failures_safe/1761077719_48cc8d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_40bffabb.c: In function ‘main’:
./samples/SAFE/__tmp_40bffabb.c:156:9: error: expected expression at end of input
  156 |         if (!add_edge(&graph, src, dest, weight))
      |         ^~
./samples/SAFE/__tmp_40bffabb.c:156:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_40bffabb.c:156:9: error: expected declaration or statement at end of input
